add product model

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -6,7 +6,6 @@
     margin-top: 0 !important;
     padding: 0 !important;
 }
-
-.react-datepicker__input-container{
-    
+.margin-box-item-list{
+    margin-left: 5px;
 }
